<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".expenses.ExpenseDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/new_expense" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/expense_title_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/expense_title"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/expense_title_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/expense_amount_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/expense_amount"
                app:layout_constraintTop_toBottomOf="@+id/expense_title_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/expense_amount_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/category_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/expense_category"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/expense_amount_layout" />

            <Spinner
                android:id="@+id/category_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/category_label" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/expense_date_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/expense_date"
                app:layout_constraintTop_toBottomOf="@+id/category_spinner"
                app:startIconDrawable="@drawable/ic_calendar">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/expense_date_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/expense_description_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/expense_description"
                app:layout_constraintTop_toBottomOf="@+id/expense_date_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/expense_description_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:lines="4" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/material_cost_check_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/is_material_cost"
                app:layout_constraintTop_toBottomOf="@+id/expense_description_layout" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/labor_cost_check_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/is_labor_cost"
                app:layout_constraintTop_toBottomOf="@+id/material_cost_check_box" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/save_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/save"
                app:layout_constraintTop_toBottomOf="@+id/labor_cost_check_box" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>